# newEx4

./: AnomalyDetector.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
